--- a/TorontoWeather/TorontoWeatherV2.csproj
+++ b/TorontoWeather/TorontoWeatherV2.csproj
@@ -1,27 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	  <TargetFramework>netstandard2.0</TargetFramework>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <PackageId>TorontoWeatherSirSir</PackageId>
-	  <Version>1.0.2</Version>
-	  <Authors>SirSir</Authors>
-	  <Description>A simple library to get Toronto weather using Open-Meteo API.</Description>
-	  <Title>Weather App</Title>
-	  <Copyright>SirSir2024</Copyright>
-	  <PackageReadmeFile>Readme.md</PackageReadmeFile>
-	  <RepositoryUrl>github.com/tempfornow</RepositoryUrl>
-	  <RepositoryType>git</RepositoryType>
-	  <PackageTags>weather,toronto,sirsir,bingo</PackageTags>
-	  <PackageReleaseNotes>first version</PackageReleaseNotes>
-	  <AssemblyVersion>1.1.1.1</AssemblyVersion>
-	  <FileVersion>1.1.1.1</FileVersion>
-	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
-	  <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-	  <PackageProjectUrl>example.com/tempfornow</PackageProjectUrl>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>TorontoWeatherA3692</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>TonyTony</Authors>
+		<Description>A simple library to get Toronto weather using Open-Meteo API.</Description>
+		<Title>Weather App</Title>
+		<Copyright>TonyTony2024</Copyright>
+		<PackageReadmeFile>Readme.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/Sanchez180/TorontoWeatherTonyV2.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>weather,toronto,TonyTony,bingo</PackageTags>
+		<PackageReleaseNotes>first version</PackageReleaseNotes>
+		<AssemblyVersion>1.1.1.1</AssemblyVersion>
+		<FileVersion>1.1.1.1</FileVersion>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<PackageProjectUrl>example.com/tempfornow</PackageProjectUrl>
+	</PropertyGroup>
 
-  <ItemGroup>
+	<ItemGroup>
     <Compile Remove="WeatherService - Copy.cs" />
   </ItemGroup>
 
